# Kicad-mcp

./: LICENSE  README.md  __init__.py  __main__.py  connection.py  create_tools.py  edit_tools.py  exec_tools.py  export_tools.py  helpers.py  net_layer_tools.py  project_tools.py  pyproject.toml  read_tools.py  run_server.py  schematic_tools.py  server.py  system_tools.py
